# nix-search

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
nix/: devshell.nix  package.nix
skills/nix-search/: SKILL.md
skills/nix-search/references/: search-patterns.md
src/nix_search/: __init__.py  __main__.py  cli.py  client.py  formatter.py
