[project]
name = "nix-search"
version = "0.1.0"
description = "CLI tool to search NixOS packages and options using search.nixos.org API"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = ["requests>=2.31.0", "rich>=13.0.0", "click>=8.0.0"]

[project.scripts]
nix-search = "nix_search.__main__:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
